data analasys update

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -25,13 +25,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data= pd.read_csv(\"C:/Users/MSI/Desktop/machine learning/vgsales.csv\")"
+    "data= pd.read_csv(\"vgsales.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -165,6 +167,13 @@
    ],
    "source": [
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``Global_Sales``$=$ ``NA_Sales`` $+$ ``EU_Sales``$+$ ``JP_Sales``$+$``Other_Sales``"
    ]
   },
   {
